account validation & logout
